# icfpc2020

./: .bazelrc  .gitignore  README.md  WORKSPACE  build.sh  replay_state.txt  run.sh  test.sh
.github/workflows/: secrets.yml  sentinel.yml  submit.yml  test.yml
ai/: cpp_sample  rust_sample
ai/cpp_sample/: BUILD  framework.h  main.cpp  (+1 more)
bot/chunjp/beam_test/: Cargo.toml
bot/chunjp/beam_test/src/: main.rs
docs/: index.html  web.js
draftcode/: README.md  go.mod
draftcode-infra-practice/: go.mod  go.sum
examples/: BUILD  app.cc  data.proto  e2e_test.go  minimal_lib.cc  minimal_lib.h  minimal_lib_test.cc  minimal_main.cc  protobuf.cc
infra/: .dockerignore  Dockerfile.hello  Dockerfile.nginx  compose.sentinel.yaml  go.mod  make_submissions.sh
messages/: decoded10.txt  decoded11.txt  decoded12.txt  decoded13.txt  decoded14.txt  decoded15.txt  decoded16.txt  decoded17.txt  decoded18.txt  decoded19.txt  decoded2.txt  decoded20.txt  decoded21.txt  decoded22.txt  decoded23.txt  decoded24.txt  decoded25.txt  decoded26.txt  decoded27.txt  decoded28.txt  decoded29.txt  decoded3.txt  decoded30.txt  decoded31.txt  decoded32.txt  decoded33.txt  decoded34.txt  decoded35.txt  decoded36.txt  decoded37.txt  decoded38.txt  decoded39.txt  decoded4.txt  decoded40.txt  decoded41.txt  decoded42.txt  decoded5.txt  decoded6.txt  decoded7.txt  decoded8.txt  (+2 more)
oka/: Cargo.toml  txt2png.go
psh/: extract_bitmap.py  extract_sparse_bitmap.py  solver_a.py
rewrite/: compile.py  galaxy.spacecat.txt
tools/: ap_demodulate.sh  demodulate.sh  modulate.sh  send_msg.sh  send_msg_raw.sh
(+240 files in other folders)
