[package]
name = "beam_test"
version = "0.1.0"
authors = ["Shun Sakuraba <shun.sakuraba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_game_base = {path = "../../../infra/rust_game_base"}
anyhow = "1.0"
